# mini-c

./: .gitignore  CMakeLists.txt  ast.cpp  def.h  gen_ir.cpp  lex.l  parser.ypp  semantics.cpp
